# ai-code-reviewer

./: .env  .env.example  .gitignore  README.md  docker-compose.api.yml  docker-compose.ollama.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  adaptation.py  config.py  diff_utils.py  errors.py  github_session.py  hashing.py  main.py  pagination.py  postgres_store.py  rag_adapter.py  store.py  store_factory.py
backend/db/migrations/: 0002_adaptation.sql  0003_runtime_store_state.sql
backend/docs/: debug-pr-mocks.md  github-smoke-test.md  handoff.md  openapi.v1.yaml
backend/scripts/: bootstrap_rag.py  bootstrap_stack.py  export_pr_mocks.py  github_smoke.py
backend/tests/unit/: test_adaptation_v1.py  test_github_publish.py  test_gitlab_publish.py  test_model_api_client.py  test_postgres_store.py  test_rag_pipeline_v2.py  test_rag_runtime.py  test_rag_service_contract.py  test_snapshot_v5.py
docs/: compose-modes.md  frontend-ui-migration-plan.md
frontend/: .env.example  Dockerfile
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AppShell.tsx
frontend/src/debug/: presets.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ConnectPage.tsx  RepoWorkspacePage.tsx  ReposPage.tsx
frontend/src/store/: app-store.tsx
rag-ml/: README.md  requirements.txt
rag-ml/kb/: ATTRIBUTION.md  build-docs.py  pull-docs.sh
rag-ml/scripts/: build_indexes.py  eval_debug_prs.py  inspect_retrieval.py  inventory.py
(+47 files in other folders)
