[project]
name = "swagreviewer-backend"
version = "0.2.0"
description = "SWAGReviewer backend rewritten in Python/FastAPI"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "numpy>=2.0,<3.0",
  "rank-bm25>=0.2.2,<1.0",
  "tqdm>=4.66,<5.0",
  "psycopg[binary]>=3.2,<4.0",
]

[tool.uvicorn]
factory = false
app = "app.main:app"
host = "0.0.0.0"
port = 4000
